// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ManageServersRowDropdown /> > renders expected size and icon 1`] = `
<div>
  <div
    class="relative inline-block"
  >
    <button
      aria-controls="«r9»"
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Options"
      class="flex items-center rounded-md focus-ring cursor-pointer border border-lm-border dark:border-dm-border bg-lm-primary dark:bg-dm-primary group-[&]/card:bg-lm-input group-[&]/card:dark:bg-dm-input px-3 py-1.5 gap-x-2"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-ellipsis-vertical fa-width-auto "
        data-icon="ellipsis-vertical"
        data-prefix="fas"
        role="img"
        viewBox="0 0 128 512"
      >
        <path
          d="M64 144a56 56 0 1 1 0-112 56 56 0 1 1 0 112zm0 224c30.9 0 56 25.1 56 56s-25.1 56-56 56-56-25.1-56-56 25.1-56 56-56zm56-112c0 30.9-25.1 56-56 56s-56-25.1-56-56 25.1-56 56-56 56 25.1 56 56z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
  <span>
    DeleteServerModal 
    [CLOSED]
  </span>
</div>
`;

exports[`<ManageServersRowDropdown /> > renders expected size and icon 2`] = `
<div>
  <div
    class="relative inline-block"
  >
    <button
      aria-controls="«rb»"
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Options"
      class="flex items-center rounded-md focus-ring cursor-pointer border border-lm-border dark:border-dm-border bg-lm-primary dark:bg-dm-primary group-[&]/card:bg-lm-input group-[&]/card:dark:bg-dm-input px-3 py-1.5 gap-x-2"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-ellipsis-vertical fa-width-auto "
        data-icon="ellipsis-vertical"
        data-prefix="fas"
        role="img"
        viewBox="0 0 128 512"
      >
        <path
          d="M64 144a56 56 0 1 1 0-112 56 56 0 1 1 0 112zm0 224c30.9 0 56 25.1 56 56s-25.1 56-56 56-56-25.1-56-56 25.1-56 56-56zm56-112c0 30.9-25.1 56-56 56s-56-25.1-56-56 25.1-56 56-56 56 25.1 56 56z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
  <span>
    DeleteServerModal 
    [CLOSED]
  </span>
</div>
`;
